fix navbar z-index

--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -52,7 +52,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: black;
+    z-index: 998;
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease-in-out, visibility 0s 0.3s;
@@ -66,7 +66,7 @@
     justify-content: center;
     height: 3.75rem;
     padding: 0 1rem;
-    z-index: 1;
+    z-index: 999;
 }
 
 .navbar__content {
